NngSharp/Native/_nng.h



	typedef struct nng_socket_s {
		uint32_t id;
	} nng_socket;
	typedef struct nng_msg  nng_msg;

	typedef struct nng_aio  nng_aio;


	// nng_sendmsg is like nng_send, but offers up a message structure, which
	// gives the ability to provide more control over the message, including
	// providing backtrace information.  It also can take a message that was
	// obtain via nn_recvmsg, allowing for zero copy forwarding.
	NNG_DECL int nng_sendmsg(nng_socket, nng_msg*, int);


	// nng_recvmsg is like nng_recv, but is used to obtain a message structure
	// as well as the data buffer.  This can be used to obtain more information
	// about where the message came from, access raw headers, etc.  It also
	// can be passed off directly to nng_sendmsg.
	NNG_DECL int nng_recvmsg(nng_socket, nng_msg**, int);


	// Async IO API.  AIO structures can be thought of as "handles" to
	// support asynchronous operations.  They contain the completion callback, and
	// a pointer to consumer data.  This is similar to how overlapped I/O
	// works in Windows, when used with a completion callback.
	//
	// AIO structures can carry up to 4 distinct input values, and up to
	// 4 distinct output values, and up to 4 distinct "private state" values.
	// The meaning of the inputs and the outputs are determined by the
	// I/O functions being called.

	// nng_aio_alloc allocates a new AIO, and associated the completion
	// callback and its opaque argument.  If NULL is supplied for the
	// callback, then the caller must use nng_aio_wait() to wait for the
	// operation to complete.  If the completion callback is not NULL, then
	// when a submitted operation completes (or is canceled or fails) the
	// callback will be executed, generally in a different thread, with no
	// locks held.
	NNG_DECL int nng_aio_alloc(nng_aio**, void (*)(void*), void*);


	// Message API.
	NNG_DECL int      nng_msg_alloc(nng_msg**, size_t);

	NNG_DECL void     nng_msg_free(nng_msg*);

	NNG_DECL void* nng_msg_body(nng_msg*);

	NNG_DECL size_t   nng_msg_len(const nng_msg*);

	NNG_DECL int      nng_msg_append(nng_msg*, const void*, size_t);

	NNG_DECL int      nng_msg_insert(nng_msg*, const void*, size_t);

	NNG_DECL void     nng_msg_clear(nng_msg*);